[package]
name = "mole_rancher_remastered"
version = "0.1.0"
edition = "2021"

# Add optimisation in debug mode
[profile.dev]
opt-level = 1

# Enable optimisation just for dependencies e.g. Bevy
[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "0.11.1"
# Disable default features since using bevy_kira_audio instead
default-features = false
features = [
	"animation",
	"bevy_animation",
	"bevy_asset",
	"bevy_core_pipeline",
	"bevy_render",
	"bevy_pbr",
	"bevy_sprite",
#	"bevy_scene",
	"bevy_text",
	"bevy_ui",
	"bevy_winit",
	"filesystem_watcher",
#	"serialize",
	"png",
	"x11",
]

[dependencies.bevy_kira_audio]
version = "0.16.0"
default-features = false
features = [
	"wav",
#	"flac",
#	"mp3",
	"ogg",
#	"settings_loader",
]

[dependencies]
rand = "0.8.5"
bevy_pkv = "0.8.0"
serde = "1.0.183"